# DeepClassifier

./: .gitignore  LICENCE  README.md  init_setup.sh  setup.cfg  setup.py  templates.py
.github/workflows/: ci.yml
configs/: config.yaml
research/: st_01.ipynb  st_02.ipynb  st_03.ipynb  st_04.ipynb  test.ipynb
src/deepClassifier/: __init__.py
src/deepClassifier/components/: __init__.py  data_ingestion.py  prepare_base_model.py  training.py
src/deepClassifier/config/: __init__.py  configuration.py
src/deepClassifier/constants/: __init__.py
src/deepClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_training.py
src/deepClassifier/utils/: common.py
tests/data/: demo.yaml
tests/unit/: test_utils.py
