[metadata]
license = MIT
license_file = LICENSE
classifier =
    programming Language :: Python :: 3.8
    Operating System :: OS Independent

 [options]
 install_requires =
    ensure==1.0.2
 python_requires = >=3.7

 [options.extras_install_requires]
 testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0

 [options.package_data]
 DeepClassifier = py.typed

 [flake8]
 max-line-length = 160
 exclude = __init__.py


